--- a/render.yaml
+++ b/render.yaml
@@ -4,4 +4,4 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: streamlit run your_app.py --server.port=$PORT
+    startCommand: streamlit run streamlit_app.py --server.port=$PORT
